test/corpus/fail/lib/actor.mo
=========
lib/actor.mo
=========

actor {};

---

(source_file
  (obj_dec
    (obj_sort)
    (obj_body)))
